Added client logos

--- a/index.html
+++ b/index.html
@@ -20,22 +20,11 @@
 
 <div class="wrap">
 
-  <div class="why">
-    <h1>We believe that those ideas <br> should be empowered.</h1>
-    <img src="/assets/img/bg-why.jpg" alt="We believe that those with ideas should be empowerd.">
-  </div>
+  {% include index/why.html %}
 
-  <div class="what">
-    <h1>We build MVPs, design identities <br> and build websites.</h1>
-    <img src="/assets/img/bg-what.jpg" alt="We build MVPs, design identities and build websites.">
-  </div>
+  {% include index/what.html %}
 
-  <div class="who">
-    <h1>We're A Vivid Visual.<br>
-    Let's visualize your ideas.</h1>
-    <a href="#" class="button">Chat With Us</a>
-    <img src="/assets/img/bg-who.jpg" alt="We're A Vivid Visual. Let's visualize your ideas.">
-  </div>
+  {% include index/who.html %}
 
 </div>
 
