--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>{{ site.data.settngs.title}}</title>
+  <title>{{ site.data.settngs.title }}</title>
   <meta charset="UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.data.settings.seo.description }}">
   <!-- <meta rel="author" href="{{ site.data.settings.seo.rel-author }}">
   <meta rel="publisher" href="{{ site.data.settings.seo.rel-publisher }}"> -->
-  <link rel="stylesheet" href="/assets/css/chico.css" />
+  <link rel="stylesheet" href="/assets/css/agness.css" />
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
