--- a/index.html
+++ b/index.html
@@ -1,36 +1,17 @@
----
----
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>{{ site.data.settings.title }} | {{ site.data.settings.description }}</title>
-  <meta charset="UTF-8">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="{{ site.data.settings.seo.description }}">
-  <!-- <meta rel="author" href="{{ site.data.settings.seo.rel-author }}">
-  <meta rel="publisher" href="{{ site.data.settings.seo.rel-publisher }}"> -->
-  <link rel="stylesheet" href="/assets/css/agnes.css" />
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-</head>
-
-{% include nav.html %}
-
-<div class="wrap">
-
-  {% include index/why.html %}
-
-  {% include index/what.html %}
-
-  {% include index/who.html %}
-
-</div>
-
-
-{% include footer.html %}
-
-<script src="/assets/js/jquery-2.1.1.min.js"></script>
-<script src="/assets/js/functions.js" type="text/javascript"></script>
-</body>
+<html ng-app>
+  <head>
+    <meta charset="utf-8">
+    <title>A Vivid Visual</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+    <link href="/assets/css/abigail.css" rel="stylesheet">
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+    <script src="/assets/js/abigail.js"></script>
+  </head>
+  <body>
+  <h1>Your ideas should be empowered.</h1>
+  <p>Hello, we're A Vivid Visual. We help businesses grow through web design, app development and branding.</p>
+  <p><i class="ion-ios-arrow-thin-right"></i> Continue</p>
+  </body>
 </html>
