--- a/app/index.html
+++ b/app/index.html
@@ -11,13 +11,18 @@
     <!-- build:js assets/js/abigail.min.js -->
     <script src="/vendors/angular/angular.min.js"></script>
     <script src="/vendors/ui-router/angular-ui-router.min.js"></script>
-    <script src="/assets/js/hello.js"></script>
     <script src="/assets/js/abigail.js"></script>
+    <script src="/assets/js/home.js"></script>
+    <script src="/assets/js/services.js"></script>
+    <script src="/assets/js/work.js"></script>
+    <script src="/assets/js/notes.js"></script>
+    <script src="/assets/js/chat.js"></script>
+
+    <script src="/assets/js/hello.js"></script>
     <!-- endbuild -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-
     <navigation class="navigation"></navigation>
 
     <main ui-view class="{{bodyClass}}"></main>
