--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>A Vivid Visual</title>
-    <base href="{{baseUrl}}">
+    <base href="/">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
     <!-- build:css assets/css/abigail.min.css -->
     <link href="/assets/css/abigail.css" rel="stylesheet">
@@ -12,6 +12,7 @@
     <!-- build:js assets/js/abigail.min.js -->
     <script src="/vendors/angular/angular.min.js"></script>
     <script src="/vendors/ui-router/angular-ui-router.min.js"></script>
+    <script src="/vendors/angular-touch/angular-touch.min.js"></script>
     <script src="/assets/js/abigail.js"></script>
     <script src="/assets/js/home.js"></script>
     <script src="/assets/js/about.js"></script>
