--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <base href="/">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
     <!-- build:css assets/css/abigail.min.css -->
-    <link href="/assets/css/abigail.css" rel="stylesheet">
+    <link href="assets/css/abigail.css" rel="stylesheet">
     <!-- endbuild -->
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <!-- build:js assets/js/abigail.min.js -->
