--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,6 @@
     <navigation></navigation>
     <main ui-view class="{{bodyClass}}">
     </main>
-    <!-- footer -->
+    <footer></footer>
   </body>
 </html>
